--- a/index.html
+++ b/index.html
@@ -144,9 +144,9 @@
                     <img class="w-100" src="img/carousel-1.jpg" alt="Image">
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <div class="p-3" style="max-width: 800px;">
-                            <h4 class="text-primary text-uppercase font-weight-normal mb-md-3">Creative Interior Design</h4>
-                            <h3 class="display-3 text-white mb-md-4">Make Your Home Better</h3>
-                            <a href="" class="btn btn-primary py-md-3 px-md-5 mt-2 mt-md-4">Learn More</a>
+                            <h4 class="text-primary text-uppercase font-weight-normal mb-md-3">Design intérieur créatif</h4>
+                            <h3 class="display-3 text-white mb-md-4">Améliorez votre maison</h3>
+                            <!-- <a href="" class="btn btn-primary py-md-3 px-md-5 mt-2 mt-md-4">Learn More</a> -->
                         </div>
                     </div>
                 </div>
@@ -154,9 +154,9 @@
                     <img class="w-100" src="img/carousel-2.jpg" alt="Image">
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <div class="p-3" style="max-width: 800px;">
-                            <h4 class="text-primary text-uppercase font-weight-normal mb-md-3">Creative Interior Design</h4>
-                            <h3 class="display-3 text-white mb-md-4">Stay At Home In Peace</h3>
-                            <a href="" class="btn btn-primary py-md-3 px-md-5 mt-2 mt-md-4">Learn More</a>
+                            <h4 class="text-primary text-uppercase font-weight-normal mb-md-3">Design intérieur créatif</h4>
+                            <h3 class="display-3 text-white mb-md-4">Restez chez vous en toute tranquillité</h3>
+                            <!-- <a href="" class="btn btn-primary py-md-3 px-md-5 mt-2 mt-md-4">Learn More</a> -->
                         </div>
                     </div>
                 </div>
@@ -183,37 +183,37 @@
                 <div class="col-lg-5">
                     <div class="d-flex flex-column align-items-center justify-content-center bg-primary h-100 py-5 px-3">
                         <i class="flaticon-brickwall display-1 font-weight-normal text-secondary mb-3"></i>
-                        <h4 class="display-3 mb-3">25+</h4>
-                        <h1 class="m-0">Years Experience</h1>
+                        <h4 class="display-3 mb-3">35+</h4>
+                        <h1 class="m-0">Années d'expérience</h1>
                     </div>
                 </div>
                 <div class="col-lg-7 m-0 my-lg-5 pt-5 pb-5 pb-lg-2 pl-lg-5">
-                    <h6 class="text-primary font-weight-normal text-uppercase mb-3">Learn About Us</h6>
-                    <h1 class="mb-4 section-title">We Are The Best Interior Designing Firm In Your City</h1>
-                    <p>Invidunt lorem justo sanctus clita. Erat lorem labore ea, justo dolor lorem ipsum ut sed eos, ipsum et dolor kasd sit ea justo. Erat justo sed sed diam. Ea et erat ut sed diam sea ipsum est dolor</p>
+                    <h6 class="text-primary font-weight-normal text-uppercase mb-3">En savoir plus sur nous</h6>
+                    <h1 class="mb-4 section-title">Nous sommes les meilleurs designers et conception de miroiterie du Maroc </h1>
+                    <!--<p>Invidunt lorem justo sanctus clita. Erat lorem labore ea, justo dolor lorem ipsum ut sed eos, ipsum et dolor kasd sit ea justo. Erat justo sed sed diam. Ea et erat ut sed diam sea ipsum est dolor</p> -->
                     <div class="row py-2">
                         <div class="col-sm-6">
                             <div class="d-flex align-items-center mb-4">
                                 <h1 class="flaticon-house font-weight-normal text-primary m-0 mr-3"></h1>
-                                <h5 class="text-truncate m-0">Project Planning</h5>
+                                <h5 class="text-truncate m-0">Planification du projet</h5>
                             </div>
                         </div>
                         <div class="col-sm-6">
                             <div class="d-flex align-items-center mb-4">
                                 <h1 class="flaticon-stairs font-weight-normal text-primary m-0 mr-3"></h1>
-                                <h5 class="text-truncate m-0">Exterior & Interior</h5>
+                                <h5 class="text-truncate m-0">Extérieur et intérieur</h5>
                             </div>
                         </div>
                         <div class="col-sm-6">
                             <div class="d-flex align-items-center mb-4">
                                 <h1 class="flaticon-office font-weight-normal text-primary m-0 mr-3"></h1>
-                                <h5 class="text-truncate m-0">Commercial Design</h5>
+                                <h5 class="text-truncate m-0">Conception commerciale / moderne </h5>
                             </div>
                         </div>
                         <div class="col-sm-6">
                             <div class="d-flex align-items-center mb-4">
                                 <h1 class="flaticon-living-room font-weight-normal text-primary m-0 mr-3"></h1>
-                                <h5 class="text-truncate m-0">Residential Design</h5>
+                                <h5 class="text-truncate m-0">Design résidentiel</h5>
                             </div>
                         </div>
                     </div>
@@ -265,11 +265,11 @@
             <div class="row">
                 <div class="col-lg-7 mt-5 py-5 pr-lg-5">
                     <h6 class="text-primary font-weight-normal text-uppercase mb-3">Why Choose Us?</h6>
-                    <h1 class="mb-4 section-title">25+ Years Experience In The Interior Design Industry</h1>
+                    <h1 class="mb-4 section-title">35+ Années d'expérience In The Interior Design Industry</h1>
                     <p class="mb-4">Dolores lorem lorem ipsum sit et ipsum. Sadip sea amet diam dolore sed et. Sit rebum labore sit sit ut vero no sit. Et elitr stet dolor sed sit et sed ipsum et kasd ut. Erat duo eos et erat sed diam duo</p>
                     <ul class="list-inline">
                         <li>
-                            <h5><i class="far fa-check-square text-primary mr-3"></i>25+ Years Experience</h5>
+                            <h5><i class="far fa-check-square text-primary mr-3"></i>35+ Années d'expérience</h5>
                         </li>
                         <li>
                             <h5><i class="far fa-check-square text-primary mr-3"></i>Best Interior Design</h5>
