--- a/service.html
+++ b/service.html
@@ -108,7 +108,7 @@
                         <h1 class="flaticon-office font-weight-normal text-primary m-0 mr-3"></h1>
                         <div class="d-flex flex-column">
                             <h5>Notre bureau</h5>
-                            <p class="m-0">123 Street, New York, USA</p>
+                            <p class="m-0">Qartier Bourgogne Lot El Alj Rue,1 Magasin N°18 casablanca</p>
                         </div>
                     </div>
                 </div>
@@ -117,7 +117,7 @@
                         <h1 class="flaticon-email font-weight-normal text-primary m-0 mr-3"></h1>
                         <div class="d-flex flex-column">
                             <h5>Envoyez-nous un courriel</h5>
-                            <p class="m-0">info@example.com</p>
+                            <p class="m-0">choix.verre@gmail.com</p>
                         </div>
                     </div>
                 </div>
@@ -126,7 +126,7 @@
                         <h1 class="flaticon-telephone font-weight-normal text-primary m-0 mr-3"></h1>
                         <div class="d-flex flex-column">
                             <h5>Appelez-nous</h5>
-                            <p class="m-0">+012 345 6789</p>
+                            <p class="m-0">Tél: 0522225259 Gsm: 0661327102-0661327958</p>
                         </div>
                     </div>
                 </div>
@@ -197,11 +197,11 @@
             <div class="row">
                 <div class="col-lg-7 mt-5 py-5 pr-lg-5">
                     <h6 class="text-primary font-weight-normal text-uppercase mb-3">Why Choose Us?</h6>
-                    <h1 class="mb-4 section-title">25+ Years Experience In The Interior Design Industry</h1>
+                    <h1 class="mb-4 section-title">35+ Années d'expérience In The Interior Design Industry</h1>
                     <p class="mb-4">Dolores lorem lorem ipsum sit et ipsum. Sadip sea amet diam dolore sed et. Sit rebum labore sit sit ut vero no sit. Et elitr stet dolor sed sit et sed ipsum et kasd ut. Erat duo eos et erat sed diam duo</p>
                     <ul class="list-inline">
                         <li>
-                            <h5><i class="far fa-check-square text-primary mr-3"></i>25+ Years Experience</h5>
+                            <h5><i class="far fa-check-square text-primary mr-3"></i>35+ Années d'expérience</h5>
                         </li>
                         <li>
                             <h5><i class="far fa-check-square text-primary mr-3"></i>Best Interior Design</h5>
@@ -269,9 +269,9 @@
         <div class="row pt-5">
             <div class="col-lg-3 col-md-6 mb-5">
                 <h4 class="text-primary mb-4">Get In Touch</h4>
-                <p><i class="fa fa-map-marker-alt mr-2"></i>123 Street, New York, USA</p>
-                <p><i class="fa fa-phone-alt mr-2"></i>+012 345 67890</p>
-                <p><i class="fa fa-envelope mr-2"></i>info@example.com</p>
+                <p><i class="fa fa-map-marker-alt mr-2"></i>Qartier Bourgogne Lot El Alj Rue,1 Magasin N°18 casablanca</p>
+                <p><i class="fa fa-phone-alt mr-2"></i>Tél: 0522225259 Gsm: 0661327102-06613279580</p>
+                <p><i class="fa fa-envelope mr-2"></i>choix.verre@gmail.com</p>
                 <div class="d-flex justify-content-start mt-4">
                     <a class="btn btn-outline-light rounded-circle text-center mr-2 px-0" style="width: 38px; height: 38px;" href="#"><i class="fab fa-twitter"></i></a>
                     <a class="btn btn-outline-light rounded-circle text-center mr-2 px-0" style="width: 38px; height: 38px;" href="#"><i class="fab fa-facebook-f"></i></a>
