--- a/single.html
+++ b/single.html
@@ -108,7 +108,7 @@
                         <h1 class="flaticon-office font-weight-normal text-primary m-0 mr-3"></h1>
                         <div class="d-flex flex-column">
                             <h5>Notre bureau</h5>
-                            <p class="m-0">123 Street, New York, USA</p>
+                            <p class="m-0">Qartier Bourgogne Lot El Alj Rue,1 Magasin N°18 casablanca</p>
                         </div>
                     </div>
                 </div>
@@ -117,7 +117,7 @@
                         <h1 class="flaticon-email font-weight-normal text-primary m-0 mr-3"></h1>
                         <div class="d-flex flex-column">
                             <h5>Envoyez-nous un courriel</h5>
-                            <p class="m-0">info@example.com</p>
+                            <p class="m-0">choix.verre@gmail.com</p>
                         </div>
                     </div>
                 </div>
@@ -126,7 +126,7 @@
                         <h1 class="flaticon-telephone font-weight-normal text-primary m-0 mr-3"></h1>
                         <div class="d-flex flex-column">
                             <h5>Appelez-nous</h5>
-                            <p class="m-0">+012 345 6789</p>
+                            <p class="m-0">Tél: 0522225259 Gsm: 0661327102-0661327958</p>
                         </div>
                     </div>
                 </div>
@@ -436,9 +436,9 @@
         <div class="row pt-5">
             <div class="col-lg-3 col-md-6 mb-5">
                 <h4 class="text-primary mb-4">Get In Touch</h4>
-                <p><i class="fa fa-map-marker-alt mr-2"></i>123 Street, New York, USA</p>
-                <p><i class="fa fa-phone-alt mr-2"></i>+012 345 67890</p>
-                <p><i class="fa fa-envelope mr-2"></i>info@example.com</p>
+                <p><i class="fa fa-map-marker-alt mr-2"></i>Qartier Bourgogne Lot El Alj Rue,1 Magasin N°18 casablanca</p>
+                <p><i class="fa fa-phone-alt mr-2"></i>Tél: 0522225259 Gsm: 0661327102-06613279580</p>
+                <p><i class="fa fa-envelope mr-2"></i>choix.verre@gmail.com</p>
                 <div class="d-flex justify-content-start mt-4">
                     <a class="btn btn-outline-light rounded-circle text-center mr-2 px-0" style="width: 38px; height: 38px;" href="#"><i class="fab fa-twitter"></i></a>
                     <a class="btn btn-outline-light rounded-circle text-center mr-2 px-0" style="width: 38px; height: 38px;" href="#"><i class="fab fa-facebook-f"></i></a>
