--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>CHOIXVERRE - Interior Design HTML Template</title>
+    <title>CHOIXVERRE Miroiterie interieur et exterieur </title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="Free HTML Templates" name="keywords">
     <meta content="Free HTML Templates" name="description">
@@ -46,19 +46,19 @@
                     <div class="d-inline-flex align-items-center">
                         <a class="text-white px-3" href="">
                             <i class="fab fa-facebook-f"></i>
-                        </a>
+                            <!-- </a>
                         <a class="text-white px-3" href="">
                             <i class="fab fa-twitter"></i>
-                        </a>
-                        <a class="text-white px-3" href="">
-                            <i class="fab fa-linkedin-in"></i>
+                        </a> -->
+                            <!-- <a class="text-white px-3" href="">
+                            <i class="fab fa-linkedin-in"></i> -->
                         </a>
                         <a class="text-white px-3" href="">
                             <i class="fab fa-instagram"></i>
-                        </a>
+                            <!-- </a>
                         <a class="text-white pl-3" href="">
                             <i class="fab fa-youtube"></i>
-                        </a>
+                        </a> -->
                     </div>
                 </div>
             </div>
@@ -72,7 +72,7 @@
         <div class="container position-relative" style="z-index: 9;">
             <nav class="navbar navbar-expand-lg bg-secondary navbar-dark py-3 py-lg-0 pl-3 pl-lg-5">
                 <a href="" class="navbar-brand">
-                    <h1 class="m-0 display-5 text-white"><span class="text-primary">Choix</span>verre</h1>
+                    <h1 href="index.html" class="m-0 display-5 text-white"><span class="text-primary">Choix</span>verre</h1>
                 </a>
                 <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                     <span class="navbar-toggler-icon"></span>
@@ -189,7 +189,7 @@
                 </div>
                 <div class="col-lg-7 m-0 my-lg-5 pt-5 pb-5 pb-lg-2 pl-lg-5">
                     <h6 class="text-primary font-weight-normal text-uppercase mb-3">En savoir plus sur nous</h6>
-                    <h1 class="mb-4 section-title">Nous sommes les meilleurs designers et conception de miroiterie du Maroc </h1>
+                    <h1 class="mb-4 section-title">Nous sommes les meilleurs designers et de conception de miroiterie du Maroc </h1>
                     <!--<p>Invidunt lorem justo sanctus clita. Erat lorem labore ea, justo dolor lorem ipsum ut sed eos, ipsum et dolor kasd sit ea justo. Erat justo sed sed diam. Ea et erat ut sed diam sea ipsum est dolor</p> -->
                     <div class="row py-2">
                         <div class="col-sm-6">
@@ -207,7 +207,7 @@
                         <div class="col-sm-6">
                             <div class="d-flex align-items-center mb-4">
                                 <h1 class="flaticon-office font-weight-normal text-primary m-0 mr-3"></h1>
-                                <h5 class="text-truncate m-0">Conception commerciale / moderne </h5>
+                                <h5 class="text-truncate m-0">Conception moderne </h5>
                             </div>
                         </div>
                         <div class="col-sm-6">
@@ -229,10 +229,10 @@
         <div class="container py-5">
             <div class="row">
                 <div class="col-lg-6 pr-lg-5">
-                    <h6 class="text-primary font-weight-normal text-uppercase mb-3">Our Awesome Services</h6>
+                    <h6 class="text-primary font-weight-normal text-uppercase mb-3">Nos superbes services</h6>
                     <h1 class="mb-4 section-title">Des services de décoration intérieure impressionnants pour votre maison</h1>
                     <p>....</p>
-                    <a href="" class="btn btn-primary mt-3 py-2 px-4">View More</a>
+                    <a href="service.html" class="btn btn-primary mt-3 py-2 px-4">View More</a>
                 </div>
                 <div class="col-lg-6 p-0 pt-5 pt-lg-0">
                     <div class="owl-carousel service-carousel position-relative">
@@ -264,7 +264,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-7 mt-5 py-5 pr-lg-5">
-                    <h6 class="text-primary font-weight-normal text-uppercase mb-3">Why Choose Us?</h6>
+                    <h6 class="text-primary font-weight-normal text-uppercase mb-3">Pourquoi nous choisir ?</h6>
                     <h1 class="mb-4 section-title">35+ Années d'expérience In The Interior Design Industry</h1>
                     <p class="mb-4">Dolores lorem lorem ipsum sit et ipsum. Sadip sea amet diam dolore sed et. Sit rebum labore sit sit ut vero no sit. Et elitr stet dolor sed sit et sed ipsum et kasd ut. Erat duo eos et erat sed diam duo</p>
                     <ul class="list-inline">
@@ -272,10 +272,10 @@
                             <h5><i class="far fa-check-square text-primary mr-3"></i>35+ Années d'expérience</h5>
                         </li>
                         <li>
-                            <h5><i class="far fa-check-square text-primary mr-3"></i>Best Interior Design</h5>
+                            <h5><i class="far fa-check-square text-primary mr-3"></i>Meilleur design intérieur</h5>
                         </li>
                         <li>
-                            <h5><i class="far fa-check-square text-primary mr-3"></i>Customer Satisfaction</h5>
+                            <h5><i class="far fa-check-square text-primary mr-3"></i>Satisfaction des clients</h5>
                         </li>
                     </ul>
                     <a href="" class="btn btn-primary mt-3 py-2 px-4">View More</a>
@@ -629,7 +629,7 @@
                 <div class="d-flex flex-column justify-content-start">
                     <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Accueil</a>
                     <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>À propos de nous</a>
-                    <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Our Services</a>
+                    <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>NOS SERVICES</a>
                     <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Our Projects</a>
                     <a class="text-white" href="#"><i class="fa fa-angle-right mr-2"></i>Contact Us</a>
                 </div>
@@ -639,7 +639,7 @@
                 <div class="d-flex flex-column justify-content-start">
                     <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Accueil</a>
                     <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>À propos de nous</a>
-                    <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Our Services</a>
+                    <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>NOS SERVICES</a>
                     <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Our Projects</a>
                     <a class="text-white" href="#"><i class="fa fa-angle-right mr-2"></i>Contact Us</a>
                 </div>
