--- a/service.html
+++ b/service.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>CHOIXVERRE - Interior Design HTML Template</title>
+    <title>CHOIXVERRE- SERVICES</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="Free HTML Templates" name="keywords">
     <meta content="Free HTML Templates" name="description">
@@ -141,13 +141,13 @@
         <div class="container py-5">
             <div class="row align-items-center py-4">
                 <div class="col-md-6 text-center text-md-left">
-                    <h1 class="mb-4 mb-md-0 text-primary text-uppercase">Our Services</h1>
+                    <h1 class="mb-4 mb-md-0 text-primary text-uppercase">NOS SERVICES</h1>
                 </div>
                 <div class="col-md-6 text-center text-md-right">
                     <div class="d-inline-flex align-items-center">
                         <a class="btn btn-outline-primary" href="">Home</a>
                         <i class="fas fa-angle-double-right text-primary mx-2"></i>
-                        <a class="btn btn-outline-primary disabled" href="">Our Services</a>
+                        <a class="btn btn-outline-primary disabled" href="">NOS SERVICES</a>
                     </div>
                 </div>
             </div>
@@ -161,27 +161,29 @@
         <div class="container py-5">
             <div class="row">
                 <div class="col-lg-6 pr-lg-5">
-                    <h6 class="text-primary font-weight-normal text-uppercase mb-3">Our Awesome Services</h6>
+                    <h6 class="text-primary font-weight-normal text-uppercase mb-3">NOS SUPERBES SERVICES</h6>
                     <h1 class="mb-4 section-title">Des services de décoration intérieure impressionnants pour votre maison</h1>
-                    <p>Invidunt lorem justo clita. Erat lorem labore ea, justo dolor lorem ipsum ut sed eos, ipsum et dolor kasd sit ea justo. Erat justo sed sed diam. Ea et erat ut sed diam sea ipsum</p>
-                    <a href="" class="btn btn-primary mt-3 py-2 px-4">View More</a>
+                    <p>A chaque client, ses exigences, et c’est pour cela que nous nous adaptons afin de vous servir dans les meilleurs délais aux meilleurs prix.
+                        <br>Notre gamme de produits est régulièrement mise à jour pour répondre et s’adapter à vos besoins.
+                    </p>
+
                 </div>
                 <div class="col-lg-6 p-0 pt-5 pt-lg-0">
                     <div class="owl-carousel service-carousel position-relative">
                         <div class="d-flex flex-column text-center bg-light mx-3 p-4">
                             <h3 class="flaticon-bedroom display-3 font-weight-normal text-primary mb-3"></h3>
                             <h5 class="mb-3">Conception de la chambre à coucher</h5>
-                            <p class="m-0">Diam amet eos at no eos sit lorem, amet rebum ipsum clita stet, diam sea est diam eos</p>
+                            <p class="m-0"></p>
                         </div>
                         <div class="d-flex flex-column text-center bg-light mx-3 p-4">
                             <h3 class="flaticon-kitchen display-3 font-weight-normal text-primary mb-3"></h3>
                             <h5 class="mb-3">Conception de la cuisine</h5>
-                            <p class="m-0">Diam amet eos at no eos sit lorem, amet rebum ipsum clita stet, diam sea est diam eos</p>
+                            <p class="m-0"></p>
                         </div>
                         <div class="d-flex flex-column text-center bg-light mx-3 p-4">
                             <h3 class="flaticon-bathroom display-3 font-weight-normal text-primary mb-3"></h3>
                             <h5 class="mb-3">Conception de la salle de bains</h5>
-                            <p class="m-0">Diam amet eos at no eos sit lorem, amet rebum ipsum clita stet, diam sea est diam eos</p>
+                            <p class="m-0"></p>
                         </div>
                     </div>
                 </div>
@@ -196,21 +198,22 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-7 mt-5 py-5 pr-lg-5">
-                    <h6 class="text-primary font-weight-normal text-uppercase mb-3">Why Choose Us?</h6>
+                    <h6 class="text-primary font-weight-normal text-uppercase mb-3">Pourquoi nous choisir ?</h6>
                     <h1 class="mb-4 section-title">35+ Années d'expérience In The Interior Design Industry</h1>
-                    <p class="mb-4">Dolores lorem lorem ipsum sit et ipsum. Sadip sea amet diam dolore sed et. Sit rebum labore sit sit ut vero no sit. Et elitr stet dolor sed sit et sed ipsum et kasd ut. Erat duo eos et erat sed diam duo</p>
+                    <p class="mb-4">Dirigé par un gestionnaire qualifié possédant une vaste expérience dans le domaine, choix verre a pu constituer une équipe hautement qualifiée composée d’un Architecte intérieur et de techniciens expérimentés dans le domaine. Pour
+                        les chantiers, des équipe qualifiées, dirigées par un conducteur supérieur de travaux ayant une trentaine d’années d’expériences.</p>
                     <ul class="list-inline">
                         <li>
                             <h5><i class="far fa-check-square text-primary mr-3"></i>35+ Années d'expérience</h5>
                         </li>
                         <li>
-                            <h5><i class="far fa-check-square text-primary mr-3"></i>Best Interior Design</h5>
+                            <h5><i class="far fa-check-square text-primary mr-3"></i>Meilleur design intérieur</h5>
                         </li>
                         <li>
-                            <h5><i class="far fa-check-square text-primary mr-3"></i>Customer Satisfaction</h5>
+                            <h5><i class="far fa-check-square text-primary mr-3"></i>Satisfaction des clients</h5>
                         </li>
                     </ul>
-                    <a href="" class="btn btn-primary mt-3 py-2 px-4">View More</a>
+
                 </div>
                 <div class="col-lg-5">
                     <div class="d-flex flex-column align-items-center justify-content-center h-100 overflow-hidden">
@@ -233,33 +236,25 @@
                     </div>
                 </div>
                 <div class="col-md-7 py-5 pl-md-5">
-                    <h6 class="text-primary font-weight-normal text-uppercase mb-3 pt-5">Testimonial</h6>
-                    <h1 class="mb-4 section-title">What Our Clients Say</h1>
+                    <h6 class="text-primary font-weight-normal text-uppercase mb-3 pt-5">Nos produits</h6>
+                    <h1 class="mb-4 section-title">Vitrerie/Miroiterie/Menuiserie Aluminum et PVC</h1>
                     <div class="owl-carousel testimonial-carousel position-relative pb-5 mb-md-5">
-                        <div class="d-flex flex-column">
-                            <div class="d-flex align-items-center mb-3">
-                                <img class="img-fluid rounded-circle" src="img/testimonial-1.jpg" style="width: 60px; height: 60px;" alt="">
-                                <div class="ml-3">
-                                    <h5>Client Name</h5>
-                                    <i>Profession</i>
-                                </div>
-                            </div>
-                            <p>Tempor at diam tempor sed. Sanctus dolor ipsum ut nonumy amet clita sea. Sed eos sed dolores vero no. Ipsum elitr elitr stet dolor lorem erat. Diam no amet sea justo vero ut. Dolor ipsum kasd ipsum dolore.</p>
-                        </div>
-                        <div class="d-flex flex-column">
-                            <div class="d-flex align-items-center mb-3">
-                                <img class="img-fluid rounded-circle" src="img/testimonial-2.jpg" style="width: 60px; height: 60px;" alt="">
-                                <div class="ml-3">
-                                    <h5>Client Name</h5>
-                                    <i>Profession</i>
-                                </div>
-                            </div>
-                            <p class="m-0">Tempor at diam tempor sed. Sanctus dolor ipsum ut nonumy amet clita sea. Sed eos sed dolores vero no. Ipsum elitr elitr stet dolor lorem erat. Diam no amet sea justo vero ut. Dolor ipsum kasd ipsum dolore.</p>
-                        </div>
+
+
+                        <p>Double vitrage.<br> Miroirs. <br> Halls d’entrée.<br> Verres faiblement émissifs.<br> Vitrage traitement UV.<br> Vitrines verres.<br> Coupe-feu.<br> Survitrage.<br> Verres de décoration.<br> Verres autonettoyant.<br> sInsert de
+                            cheminées.
+                            <br> Portes en verre de sécurité.<br> Verres retardataire à l’effraction.<br> Verres incassables.<br> Verres gravés biseautés.<br> Crédences de cuisine.<br> Vitrage isolant avec store intégré.</p>
+
+                        <p>volets roulants alu – PVC – bois. <br> Volets bâtant alu – PVC – bois.<br> Menuiserie aluminium.<br> Menuiserie PVC.<br> Menuiserie mixte aluminium/bois.<br> Grilles de protection.<br> Rideaux métalliques.<br> Stores solaires.<br>                            Persiennes métalliques – PVC.<br> Plexiglas.
+                            <br> Cloisons amovibles.<br> Portes de garage basculantes et sectionnels.<br> Serrures.
+                            <br> Façades de placard.</p>
                     </div>
                 </div>
             </div>
         </div>
+    </div>
+    </div>
+
     </div>
     <!-- Testimonial End -->
 
@@ -273,9 +268,9 @@
                 <p><i class="fa fa-phone-alt mr-2"></i>Tél: 0522225259 Gsm: 0661327102-06613279580</p>
                 <p><i class="fa fa-envelope mr-2"></i>choix.verre@gmail.com</p>
                 <div class="d-flex justify-content-start mt-4">
-                    <a class="btn btn-outline-light rounded-circle text-center mr-2 px-0" style="width: 38px; height: 38px;" href="#"><i class="fab fa-twitter"></i></a>
+
                     <a class="btn btn-outline-light rounded-circle text-center mr-2 px-0" style="width: 38px; height: 38px;" href="#"><i class="fab fa-facebook-f"></i></a>
-                    <a class="btn btn-outline-light rounded-circle text-center mr-2 px-0" style="width: 38px; height: 38px;" href="#"><i class="fab fa-linkedin-in"></i></a>
+
                     <a class="btn btn-outline-light rounded-circle text-center mr-2 px-0" style="width: 38px; height: 38px;" href="#"><i class="fab fa-instagram"></i></a>
                 </div>
             </div>
@@ -284,40 +279,20 @@
                 <div class="d-flex flex-column justify-content-start">
                     <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Home</a>
                     <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>About Us</a>
-                    <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Our Services</a>
+                    <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>NOS SERVICES</a>
                     <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Our Projects</a>
                     <a class="text-white" href="#"><i class="fa fa-angle-right mr-2"></i>Contact Us</a>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 mb-5">
-                <h4 class="text-primary mb-4">Popular Links</h4>
-                <div class="d-flex flex-column justify-content-start">
-                    <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Home</a>
-                    <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>About Us</a>
-                    <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Our Services</a>
-                    <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Our Projects</a>
-                    <a class="text-white" href="#"><i class="fa fa-angle-right mr-2"></i>Contact Us</a>
-                </div>
+
             </div>
-            <div class="col-lg-3 col-md-6 mb-5">
-                <h4 class="text-primary mb-4">Newsletter</h4>
-                <form action="">
-                    <div class="form-group">
-                        <input type="text" class="form-control border-0" placeholder="Your Name" required="required" />
-                    </div>
-                    <div class="form-group">
-                        <input type="email" class="form-control border-0" placeholder="Your Email" required="required" />
-                    </div>
-                    <div>
-                        <button class="btn btn-lg btn-primary btn-block border-0" type="submit">Submit Now</button>
-                    </div>
-                </form>
-            </div>
+
         </div>
         <div class="container border-top border-secondary pt-5">
             <p class="m-0 text-center text-white">
-                &copy; <a class="text-white font-weight-bold" href="#">Your Site Name</a>. All Rights Reserved. Designed by
-                <a class="text-white font-weight-bold" href="https://htmlcodex.com">HTML Codex</a>
+                &copy; <a class="text-white font-weight-bold" href="index.html">choix verre</a>. All Rights Reserved. Designed by boujemaoui ayoub .
+
             </p>
         </div>
     </div>
