--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>CHOIXVERRE - Interior Design HTML Template</title>
+    <title>CHOIXVERRE - About</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="Free HTML Templates" name="keywords">
     <meta content="Free HTML Templates" name="description">
@@ -170,7 +170,8 @@
                 <div class="col-lg-7 m-0 my-lg-5 pt-5 pb-5 pb-lg-2 pl-lg-5">
                     <h6 class="text-primary font-weight-normal text-uppercase mb-3">En savoir plus sur nous</h6>
                     <h1 class="mb-4 section-title">Nous sommes les meilleurs designers et conception de miroiterie du Maroc </h1>
-                    <p>Invidunt lorem justo sanctus clita. Erat lorem labore ea, justo dolor lorem ipsum ut sed eos, ipsum et dolor kasd sit ea justo. Erat justo sed sed diam. Ea et erat ut sed diam sea ipsum est dolor</p>
+                    <p>Notre philosophie, nos valeurs et nos expertises dans le domaine de la miroiterie vous offrent notre compréhension en même temps que notre capacité à imaginer les meilleurs moyens pour développer votre interieur ou exterieur .
+                    </p>
                     <div class="row py-2">
                         <div class="col-sm-6">
                             <div class="d-flex align-items-center mb-4">
@@ -187,7 +188,7 @@
                         <div class="col-sm-6">
                             <div class="d-flex align-items-center mb-4">
                                 <h1 class="flaticon-office font-weight-normal text-primary m-0 mr-3"></h1>
-                                <h5 class="text-truncate m-0">Conception commerciale / moderne </h5>
+                                <h5 class="text-truncate m-0">Conception moderne </h5>
                             </div>
                         </div>
                         <div class="col-sm-6">
@@ -210,8 +211,9 @@
             <div class="row">
                 <div class="col-lg-7 mt-5 py-5 pr-lg-5">
                     <h6 class="text-primary font-weight-normal text-uppercase mb-3">Pourquoi nous choisir ?</h6>
-                    <h1 class="mb-4 section-title">35+ Années d'expérience In The Interior Design Industry</h1>
-                    <p class="mb-4">Dolores lorem lorem ipsum sit et ipsum. Sadip sea amet diam dolore sed et. Sit rebum labore sit sit ut vero no sit. Et elitr stet dolor sed sit et sed ipsum et kasd ut. Erat duo eos et erat sed diam duo</p>
+                    <h1 class="mb-4 section-title">35+ Années d'expérience </h1>
+                    <p class="mb-4">Tout commence par l’immersion dans votre métier pour comprendre le contexte de vos besoins. Notre parfaite écoute de ce que vous exprimez de vos problématiques et objectifs nous permettront de parfaitement nous approprier votre projet
+                        pour vous apporter des réponses adaptées et vous faire progresser. Notre analyse met en avant des critères et des valeurs tangibles sur lesquels nous pouvons nous appuyer pour structurer la stratégie</p>
                     <ul class="list-inline">
                         <li>
                             <h5><i class="far fa-check-square text-primary mr-3"></i>35+ Années d'expérience</h5>
@@ -223,7 +225,7 @@
                             <h5><i class="far fa-check-square text-primary mr-3"></i>Satisfaction des clients</h5>
                         </li>
                     </ul>
-                    <a href="" class="btn btn-primary mt-3 py-2 px-4">View More</a>
+                    <a href="service.html" class="btn btn-primary mt-3 py-2 px-4">Voir plus</a>
                 </div>
                 <div class="col-lg-5">
                     <div class="d-flex flex-column align-items-center justify-content-center h-100 overflow-hidden">
@@ -236,7 +238,7 @@
     <!-- Features End -->
 
 
-    <!-- Team Start -->
+    <!-- Team Start 
     <div class="container-fluid bg-light">
         <div class="container">
             <div class="row">
@@ -309,15 +311,15 @@
             </div>
         </div>
     </div>
-    <!-- Team End -->
+     Team End -->
 
 
     <!-- Footer Start -->
     <div class="container-fluid bg-dark text-white py-5 px-sm-3 px-md-5">
         <div class="row pt-5">
             <div class="col-lg-3 col-md-6 mb-5">
-                <h4 class="text-primary mb-4">Get In Touch</h4>
-                <p><i class="fa fa-map-marker-alt mr-2"></i>Qartier Bourgogne Lot El Alj Rue,1 Magasin N°18 casablanca</p>
+                <h4 class="text-primary mb-4">Prendre contact</h4>
+                <p><i class="fa fa-map-marker-alt mr-2" href=""></i>Qartier Bourgogne Lot El Alj Rue,1 Magasin N°18 casablanca</p>
                 <p><i class="fa fa-phone-alt mr-2"></i>Tél: 0522225259 Gsm: 0661327102-06613279580</p>
                 <p><i class="fa fa-envelope mr-2"></i>choix.verre@gmail.com</p>
                 <div class="d-flex justify-content-start mt-4">
@@ -328,44 +330,22 @@
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 mb-5">
-                <h4 class="text-primary mb-4">Quick Links</h4>
+                <h4 class="text-primary mb-4">Liens rapides</h4>
                 <div class="d-flex flex-column justify-content-start">
                     <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Home</a>
                     <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>About Us</a>
                     <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>NOS SERVICES</a>
-                    <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Our Projects</a>
+                    <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Nos projets</a>
                     <a class="text-white" href="#"><i class="fa fa-angle-right mr-2"></i>Contact Us</a>
                 </div>
             </div>
-            <div class="col-lg-3 col-md-6 mb-5">
-                <h4 class="text-primary mb-4">Popular Links</h4>
-                <div class="d-flex flex-column justify-content-start">
-                    <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Home</a>
-                    <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>About Us</a>
-                    <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>NOS SERVICES</a>
-                    <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Our Projects</a>
-                    <a class="text-white" href="#"><i class="fa fa-angle-right mr-2"></i>Contact Us</a>
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-6 mb-5">
-                <h4 class="text-primary mb-4">Newsletter</h4>
-                <form action="">
-                    <div class="form-group">
-                        <input type="text" class="form-control border-0" placeholder="Your Name" required="required" />
-                    </div>
-                    <div class="form-group">
-                        <input type="email" class="form-control border-0" placeholder="Your Email" required="required" />
-                    </div>
-                    <div>
-                        <button class="btn btn-lg btn-primary btn-block border-0" type="submit">Submit Now</button>
-                    </div>
-                </form>
-            </div>
+
+
         </div>
         <div class="container border-top border-secondary pt-5">
             <p class="m-0 text-center text-white">
-                &copy; <a class="text-white font-weight-bold" href="#">Your Site Name</a>. All Rights Reserved. Designed by
-                <a class="text-white font-weight-bold" href="https://htmlcodex.com">HTML Codex</a>
+                &copy; <a class="text-white font-weight-bold" href="#">Choix verre</a>. All Rights Reserved. Designed by
+                <a class="text-white font-weight-bold" href="https://www.linkedin.com/in/boujemaoui-ayoub/">boujemaoui ayoub</a>
             </p>
         </div>
     </div>
