--- a/service.html
+++ b/service.html
@@ -199,7 +199,7 @@
             <div class="row">
                 <div class="col-lg-7 mt-5 py-5 pr-lg-5">
                     <h6 class="text-primary font-weight-normal text-uppercase mb-3">Pourquoi nous choisir ?</h6>
-                    <h1 class="mb-4 section-title">35+ Années d'expérience In The Interior Design Industry</h1>
+                    <h1 class="mb-4 section-title">35+ Années d'expérience dans la Miroiterie</h1>
                     <p class="mb-4">Dirigé par un gestionnaire qualifié possédant une vaste expérience dans le domaine, choix verre a pu constituer une équipe hautement qualifiée composée d’un Architecte intérieur et de techniciens expérimentés dans le domaine. Pour
                         les chantiers, des équipe qualifiées, dirigées par un conducteur supérieur de travaux ayant une trentaine d’années d’expériences.</p>
                     <ul class="list-inline">
@@ -263,7 +263,7 @@
     <div class="container-fluid bg-dark text-white py-5 px-sm-3 px-md-5">
         <div class="row pt-5">
             <div class="col-lg-3 col-md-6 mb-5">
-                <h4 class="text-primary mb-4">Get In Touch</h4>
+                <h4 class="text-primary mb-4">Prendre contact</h4>
                 <p><i class="fa fa-map-marker-alt mr-2"></i>Qartier Bourgogne Lot El Alj Rue,1 Magasin N°18 casablanca</p>
                 <p><i class="fa fa-phone-alt mr-2"></i>Tél: 0522225259 Gsm: 0661327102-06613279580</p>
                 <p><i class="fa fa-envelope mr-2"></i>choix.verre@gmail.com</p>
@@ -275,12 +275,12 @@
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 mb-5">
-                <h4 class="text-primary mb-4">Quick Links</h4>
+                <h4 class="text-primary mb-4">Liens rapides</h4>
                 <div class="d-flex flex-column justify-content-start">
                     <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Home</a>
                     <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>About Us</a>
                     <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>NOS SERVICES</a>
-                    <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Our Projects</a>
+                    <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Nos projets</a>
                     <a class="text-white" href="#"><i class="fa fa-angle-right mr-2"></i>Contact Us</a>
                 </div>
             </div>
