--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
                                 <a class="btn btn-outline-primary m-1" href="">
                                     <i class="fa fa-link"></i>
                                 </a>
-                                <a class="btn btn-outline-primary m-80*" href="img/portfolio-1.jpg" data-lightbox="portfolio">
+                                <a class="btn btn-outline-primary m-8" href="img/portfolio-1.jpg" data-lightbox="portfolio">
                                     <i class="fa fa-eye"></i>
                                 </a>
                             </div>
