--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                         <a href="index.html" class="nav-item nav-link active">Accueil</a>
                         <a href="À propos de nous.html" class="nav-item nav-link">À propos de nous</a>
                         <a href="service.html" class="nav-item nav-link">Service</a>
-                        <a href="projet.html" class="nav-item nav-link">Projet</a>
+                        <a href="Projet.html" class="nav-item nav-link">Projet</a>
                         <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Pages</a>
                             <div class="dropdown-menu rounded-0 m-0">
