--- a/single.html
+++ b/single.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>CHOIXVERRE - Interior Design HTML Template</title>
+    <title>CHOIXVERRE - BLOG </title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="Free HTML Templates" name="keywords">
     <meta content="Free HTML Templates" name="description">
@@ -79,12 +79,12 @@
                         <a href="À propos de nous.html" class="nav-item nav-link">À propos de nous</a>
                         <a href="service.html" class="nav-item nav-link">Service</a>
                         <a href="Projet.html" class="nav-item nav-link">Projet</a>
-                        <a href="single.html" class="nav-item nav-link">Blog Detail</a>
+                        <a href="single.html" class="nav-item nav-link">BLOG</a>
                         <!-- <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle active" data-toggle="dropdown">Pages</a>
                             <div class="dropdown-menu rounded-0 m-0">
                                 <a href="blog.html" class="dropdown-item">Blog Grid</a>
-                                <a href="single.html" class="dropdown-item">Blog Detail</a>
+                                <a href="single.html" class="dropdown-item">BLOG</a>
                             </div>
                         </div> -->
                         <a href="contact.html" class="nav-item nav-link">Contact</a>
@@ -138,13 +138,13 @@
         <div class="container py-5">
             <div class="row align-items-center py-4">
                 <div class="col-md-6 text-center text-md-left">
-                    <h1 class="mb-4 mb-md-0 text-primary text-uppercase">Blog Detail</h1>
+                    <h1 class="mb-4 mb-md-0 text-primary text-uppercase">BLOG</h1>
                 </div>
                 <div class="col-md-6 text-center text-md-right">
                     <div class="d-inline-flex align-items-center">
                         <a class="btn btn-outline-primary" href="">Accueil</a>
                         <i class="fas fa-angle-double-right text-primary mx-2"></i>
-                        <a class="btn btn-outline-primary disabled" href="">Blog Detail</a>
+                        <a class="btn btn-outline-primary disabled" href="">BLOG</a>
                     </div>
                 </div>
             </div>
@@ -158,7 +158,7 @@
         <div class="row pt-5">
             <div class="col-lg-8">
                 <div class="d-flex flex-column text-left mb-4">
-                    <h6 class="text-primary font-weight-normal text-uppercase mb-3">Blog Detail Page</h6>
+                    <h6 class="text-primary font-weight-normal text-uppercase mb-3">BLOG Page</h6>
                     <h1 class="mb-4 section-title">Diam dolor est ipsum clita lorem</h1>
                     <div class="d-index-flex mb-2">
                         <span class="mr-3"><i class="fa fa-user text-primary"></i> Admin</span>
