--- a/service.html
+++ b/service.html
@@ -170,17 +170,17 @@
                     <div class="owl-carousel service-carousel position-relative">
                         <div class="d-flex flex-column text-center bg-light mx-3 p-4">
                             <h3 class="flaticon-bedroom display-3 font-weight-normal text-primary mb-3"></h3>
-                            <h5 class="mb-3">Conception de la chambre à coucher</h5>
+                            <h5 class="mb-3">Conception chambre à coucher</h5>
                             <p class="m-0"></p>
                         </div>
                         <div class="d-flex flex-column text-center bg-light mx-3 p-4">
                             <h3 class="flaticon-kitchen display-3 font-weight-normal text-primary mb-3"></h3>
-                            <h5 class="mb-3">Conception de la cuisine</h5>
+                            <h5 class="mb-3">Conception cuisine</h5>
                             <p class="m-0"></p>
                         </div>
                         <div class="d-flex flex-column text-center bg-light mx-3 p-4">
                             <h3 class="flaticon-bathroom display-3 font-weight-normal text-primary mb-3"></h3>
-                            <h5 class="mb-3">Conception de la salle de bains</h5>
+                            <h5 class="mb-3">Conception salle de bains</h5>
                             <p class="m-0"></p>
                         </div>
                     </div>
