--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <div class="p-3" style="max-width: 800px;">
                             <h4 class="text-primary text-uppercase font-weight-normal mb-md-3">Design intérieur créatif</h4>
-                            <h3 class="display-3 text-white mb-md-4">Améliorez votre maison</h3>
+                            <h3 class="display-3 text-white mb-md-4">Miroiterie Miroire venitien Vitrerie Faconnage </h3>
                             <!-- <a href="" class="btn btn-primary py-md-3 px-md-5 mt-2 mt-md-4">Learn More</a> -->
                         </div>
                     </div>
@@ -154,7 +154,7 @@
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <div class="p-3" style="max-width: 800px;">
                             <h4 class="text-primary text-uppercase font-weight-normal mb-md-3">Design intérieur créatif</h4>
-                            <h3 class="display-3 text-white mb-md-4">Restez chez vous en toute tranquillité</h3>
+                            <h3 class="display-3 text-white mb-md-4"> Menuiserie Aluminium Inox Facade Artisanat Divers</h3>
                             <!-- <a href="" class="btn btn-primary py-md-3 px-md-5 mt-2 mt-md-4">Learn More</a> -->
                         </div>
                     </div>
