--- a/blog.html
+++ b/blog.html
@@ -177,13 +177,10 @@
                     <img class="img-fluid w-50 float-right ml-4 mb-3" src="img\mv1.jpg" alt="Image">
                     <p>Rénovation de royal manssour et mamounia marrakech nos miroirs venissien </p>
                     <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p>
-                    <h3 class="mb-4">Est dolor lorem et ea</h3>
-                    <img class="img-fluid w-50 float-right ml-4 mb-3" src="img/blog-2.jpg" alt="Image">
-                    <p>Diam dolor est labore duo invidunt ipsum clita et, sed et lorem voluptua tempor invidunt at est sanctus sanctus. Clita dolores sit kasd diam takimata justo diam lorem sed. Magna amet sed rebum eos. Clita no magna no dolor erat diam
-                        tempor rebum consetetur, sanctus labore sed nonumy diam lorem amet eirmod. No at tempor sea diam kasd, takimata ea nonumy elitr sadipscing gubergren erat. Gubergren at lorem invidunt sadipscing rebum sit amet ut ut, voluptua diam
-                        dolores at sadipscing stet. Clita dolor amet dolor ipsum vero ea ea eos. Invidunt sed diam dolores takimata dolor dolore dolore sit. Sit ipsum erat amet lorem et, magna sea at sed et eos. Accusam eirmod kasd lorem clita sanctus
-                        ut consetetur et. Et duo tempor sea kasd clita ipsum et. Takimata kasd diam justo est eos erat aliquyam et ut. Ea sed sadipscing no justo et eos labore, gubergren ipsum magna dolor lorem dolore, elitr aliquyam takimata sea kasd
-                        dolores diam, amet et est accusam labore eirmod vero et voluptua. Amet labore clita duo et no.</p>
+
+                    <h3 class="mb-4">Douche en verre</h3>
+                    <img class="img-fluid w-50 float-right ml-4 mb-3" src="img\blog3.jpg" alt="Image">
+                    <p>Miroir clair 4 mm posée sur cadre bois en relief avec biseau de 05 le tous poser bor à bord</p>
                 </div>
 
                 <!-- <div class="mb-5 mx-n3">
