--- a/index.html
+++ b/index.html
@@ -1185,7 +1185,7 @@
                         <div class="card-body bg-white p-4">
                             <div class="d-flex align-items-center mb-3">
                                 <a class="btn btn-primary" href="blog.html"><i class="fa fa-link"></i></a>
-                                <h5 class="m-0 ml-3 text-truncate"></h5>
+                                <h5 class="m-0 ml-3 text-truncate">Habillage</h5>
                             </div>
                             <p>Moroco mall postaux vient sur une hauteur de 12mettre60 avec fléchissement partie avec sérigraphie et lumineuse et partie en stadip avec PVB noir
                             </p>
@@ -1193,26 +1193,26 @@
                         </div>
                     </div>
                 </div>
-                <!-- <div class="col-md-4 mb-4">
+                <div class="col-md-4 mb-4">
                     <div class="card border-0 mb-2">
-                        <img class="card-img-top" src="img/blog-2.jpg" alt="">
+                        <img class="card-img-top" src="img\blog3.jpg" alt="">
                         <div class="card-body bg-white p-4">
                             <div class="d-flex align-items-center mb-3">
-                                <a class="btn btn-primary" href=""><i class="fa fa-link"></i></a>
-                                <h5 class="m-0 ml-3 text-truncate">Diam amet eos at no eos</h5>
+                                <a class="btn btn-primary" href="blog.html"><i class="fa fa-link"></i></a>
+                                <h5 class="m-0 ml-3 text-truncate">miroire venitien </h5>
                             </div>
-                            <p>signature du gazoduc Nigéria Maroc Convention gazoduc Nigéria en direct les portes avec motif arbre de vie en feuille d'or assemblé sur une hauteur 3500 avec imposte en arc  architecture</p>
+                            <p>Miroir clair 4 mm posée sur cadre bois en relief avec biseau de 05 le tous poser bor à bord</p>
 
                         </div>
                     </div>
-                </div> -->
+                </div>
                 <div class="col-md-4 mb-4">
                     <div class="card border-0 mb-2">
                         <img class="card-img-top" src="img\blog2.jpg" alt="">
                         <div class="card-body bg-white p-4">
                             <div class="d-flex align-items-center mb-3">
                                 <a class="btn btn-primary" href="blog.html"><i class="fa fa-link"></i></a>
-                                <h5 class="m-0 ml-3 text-truncate"></h5>
+                                <h5 class="m-0 ml-3 text-truncate">Douche en verre</h5>
                             </div>
                             <p>Pardouche en verre trempé 10 mm poignée en.verre exta clair</p>
 
