--- a/service.html
+++ b/service.html
@@ -289,10 +289,12 @@
         </div>
         <div class="container border-top border-secondary pt-5">
             <p class="m-0 text-center text-white">
-                &copy; <a class="text-white font-weight-bold" href="index.html">choix verre</a>. All Rights Reserved. Designed by boujemaoui ayoub .
-
+                &copy; <a class="text-white font-weight-bold" href="#">Choix verre</a>. All Rights Reserved. Designed by
+                <a class="text-white font-weight-bold" href="https://www.linkedin.com/in/boujemaoui-ayoub/">boujemaoui ayoub</a>
             </p>
         </div>
+        </p>
+    </div>
     </div>
     <!-- Footer End -->
 
