--- a/À propos de nous.html
+++ b/À propos de nous.html
@@ -165,7 +165,7 @@
         <div class="container py-5">
             <div class="row align-items-center py-4">
                 <div class="col-md-6 text-center text-md-left">
-                    <h1 class="mb-4 mb-md-0 text-primary text-uppercase">À propos de nous Us</h1>
+                    <h1 class="mb-4 mb-md-0 text-primary text-uppercase">À propos de nous </h1>
                 </div>
                 <div class="col-md-6 text-center text-md-right">
                     <div class="d-inline-flex align-items-center">
