--- a/contact.html
+++ b/contact.html
@@ -231,7 +231,11 @@
                                 <p class="help-block text-danger"></p>
                             </div>
                             <div>
-                                <button class="btn btn-primary py-3 px-5" type="submit" id="sendMessageButton">ENVOYER LE MESSAGE</button>
+                                <form action="mailto:choix.verre@gmail.com" method="post" enctype="text/plain">
+                                    <!-- Vos autres champs de formulaire ici -->
+                                    <button class="btn btn-primary py-3 px-5" type="submit" id="sendMessageButton">ENVOYER LE MESSAGE</button>
+                                  </form>
+                                  
                             </div>
                         </form>
                     </div>
