--- a/index.html
+++ b/index.html
@@ -1298,6 +1298,10 @@
     <script src="mail/contact.js"></script>
 
     <!-- Template Javascript -->
+    <script type="module">
+        import { injectSpeedInsights } from '@vercel/speed-insights';
+        injectSpeedInsights();
+      </script>
     <script src="js/main.js"></script>
 </body>
 
